--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 EXPO_PUBLIC_PEXELS_KEY=Guw53YiBwtncRRJVQ4ta48yTJvLLhXjKg54DnK1BTOvgeZ4tiTmwZLLg
 EXPO_PUBLIC_UNSPLASH_KEY="UNSPLASHKEY"
+# ATTENTION exposing gemini api key in the frontend
+EXPO_PUBLIC_GEMINI_KEY=AIzaSyAJeE4hB-mlcvXdkqNd1d-SH7gFIOSJC6k
