--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 EXPO_PUBLIC_PEXELS_KEY=Guw53YiBwtncRRJVQ4ta48yTJvLLhXjKg54DnK1BTOvgeZ4tiTmwZLLg
-EXPO_PUBLIC_UNSPLASH_KEY="UNSPLASHKEY"
+EXPO_PUBLIC_UNSPLASH_KEY=UsWt6wLNmHAQ15_va-WtKQ6KJUjNupODGp4lw1MH7mE
 # ATTENTION exposing gemini api key in the frontend
 EXPO_PUBLIC_GEMINI_KEY=AIzaSyAGR2YpDoQ5_IwrCFarVBP9eUcQJf5KJTs
