--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-image-picker": "~17.0.8",
+    "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.9",
     "expo-media-library": "~18.2.1",
     "expo-print": "~15.0.7",
@@ -43,6 +44,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-share": "^12.2.1",
     "react-native-web": "~0.21.0",
     "react-native-worklets": "0.5.1",
     "zod": "^4.1.13"
