limit added for ai requests

--- a/appwrite-functions/gemini-proxy/package.json
+++ b/appwrite-functions/gemini-proxy/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "test": "echo \"No tests\" && exit 0"
   },
-  "dependencies": {},
+  "dependencies": {
+    
+  },
   "devDependencies": {}
 }
