--- a/appwrite-functions/package.json
+++ b/appwrite-functions/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "test": "echo \"No tests\" && exit 0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "node-appwrite": "^21.0.0"
+  },
   "devDependencies": {}
 }
