--- a/appwrite-functions/package.json
+++ b/appwrite-functions/package.json
@@ -5,10 +5,12 @@
   "main": "src/main.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"No tests\" && exit 0"
+    "test": "echo \"No tests\" && exit 0",
+    "build": "echo \"Build script not defined\" && exit 0"
   },
   "dependencies": {
-    "node-appwrite": "^21.0.0"
+    "node-appwrite": "^21.0.0",
+     "openai": "^6.15.0"
   },
   "devDependencies": {}
 }
